--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,12 +17,26 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer utilities{
+  .black-grad{
+    background: linear-gradient(253deg, #171717 1.82%, #1D1D24 100%);
+  }
+
+  .step-bg{
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.10) 0%, rgba(255, 255, 255, 0.00) 131.12%);
+    box-shadow: 0px 0px 4.5px 0px rgba(255, 255, 255, 0.25) inset;
+    backdrop-filter: blur(15.299999237060547px);
+  }
+
+  .form-bg{
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.10) 0%, rgba(255, 255, 255, 0.00) 131.12%);
+    box-shadow: 0px 0px 4.5px 0px rgba(255, 255, 255, 0.25) inset;
+    backdrop-filter: blur(15.299999237060547px);
+  }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
